Changing REM units to EM and fixing the more/back button alignment and hover states

--- a/src/assets/css/layout/grid.pcss
+++ b/src/assets/css/layout/grid.pcss
@@ -45,7 +45,7 @@
   &__box:not(:last-child) {
     @media (--tablet) {
       border: .0625em solid gray(95);
-      border-width: 0 1px;
+      border-width: 0 .0625em;
     }
   }
 }
