--- a/src/assets/css/layout/thumb.pcss
+++ b/src/assets/css/layout/thumb.pcss
@@ -1,19 +1,22 @@
 .thumb {
   pointer-events: auto;
-  transform: translate3d(0,30px,0);
+  transform: translate3d(0, 2em, 0);
   z-index: 50;
+
+  &:hover {
+    .thumb__imgwrap {
+      cursor: pointer;
+      z-index: 50;
+    }
+  }
 
   &::after {
     content: '';
     position: absolute;
-    width: calc(100% + 2rem);
-    height: calc(100% + 3rem);
+    width: calc(100% + 2em);
+    height: calc(100% + 3em);
     bottom: 0;
     left: 0;
-  }
-
-  &:not(.thumb--more) {
-    cursor: pointer;
   }
 
   &__imgwrap {
@@ -47,17 +50,17 @@
 
   &__title {
     position: absolute;
-    top: -2rem;
-    right: -1.75rem;
+    top: -2em;
+    right: -1.75em;
     white-space: nowrap;
     margin: 0;
   }
 
   &__number {
-    top: -2rem;
+    top: -2em;
     right: 0;
     line-height: 1;
     position: absolute;
-    font-size: 1.5rem;
+    font-size: 1.5em;
   }
 }
