--- a/src/assets/css/layout/title.pcss
+++ b/src/assets/css/layout/title.pcss
@@ -1,5 +1,5 @@
 .title-wrap {
-  padding: 2rem 0;
+  padding: 2em 0;
 
   @media (--tablet) {
     padding: 0;
