--- a/src/assets/css/layout/toggle.pcss
+++ b/src/assets/css/layout/toggle.pcss
@@ -1,21 +1,20 @@
 .toggle {
   @media (--tablet) {
-    background: var(--black-80);
+    background-color: var(--black-80);
     color: var(--white);
     border: 0;
     margin: 0;
     padding: 0;
     cursor: pointer;
-    height: calc(12vw + 30px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    height: calc(12vw + 2em);
+    display: block;
     font-family: var(--body-font-family);
     font-size: 1em;
+    overflow: hidden;
     position: relative;
     width: 100%;
     pointer-events: auto;
+    z-index: inherit;
   }
 
   &:focus {
@@ -26,26 +25,50 @@
 
   &-inner {
     @media (--tablet) {
+      align-items: center;
+      background-color: transparent;
+      border: inherit;
+      color: inherit;
+      cursor: inherit;
       display: flex;
-      align-items: flex-end;
+      font-family: inherit;
+      font-size: inherit;
+      height: 100%;
+      justify-content: center;
+      outline: inherit;
+      position: absolute;
+      text-decoration: none;
+      transition: background-color .2s ease-in-out;
+      width: 100%;
+    }
+
+    &:hover,
+    &:focus,
+    &:active {
+      @media (--tablet) {
+        background-color: var(--black-70);
+        color: var(--white);
+      }
     }
   }
 
   &-more {
-    @media (--tablet) {
-      display: inline-block;
-      margin-top: -30px;
+    > * {
+      @media (--tablet) {
+        margin-top: -1em;
+      }
     }
   }
 
   &-back {
     @media (--tablet) {
       opacity: 0;
-      position: absolute;
-      height: 50%;
-      bottom: 0;
-      display: flex;
-      align-items: center;
+    }
+
+    > * {
+      @media (--tablet) {
+        margin-top: 75%;
+      }
     }
   }
 
@@ -53,7 +76,7 @@
     @media (--tablet) {
       width: 1em;
       height: 1em;
-      /* margin: .15em 0 0 0.5em; */
+      margin-left: .125em;
       display: inline-block;
       fill: currentColor;
       stroke-width: .0625em;
